...
        android:text="Enable"
        android:textColor="@android:color/primary_text_light"
        android:textSize="17sp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"/>
    <Switch
        android:id="@+id/enable_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentEnd="true"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
...
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/enable_switch"
        android:background="@android:color/darker_gray"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:divider="@null"
        android:dividerHeight="0dp"/>

...
