<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/primary_text_light"
        android:textSize="17sp"
        android:paddingTop="10dp"/>
    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentEnd="true"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"/>
</RelativeLayout>